@@ -32,96 +32,6 @@
  */
 #include "amanda.h"
 
-#define	MIN_ALLOC	64
-
-/*
- * internal_vstralloc - copies up to MAX_STR_ARGS strings into newly
- * allocated memory.
- *
- * The MAX_STR_ARGS limit is purely an efficiency issue so we do not have
- * to scan the strings more than necessary.
- */
-
-#define	MAX_VSTRALLOC_ARGS	40
-
-static char *
-internal_vstralloc(
-    const char *file,
-    int		line,
-    const char *str,
-    va_list argp)
-{
-    char *next;
-    char *result;
-    int a, b;
-    size_t total_len;
-    const char *arg[MAX_VSTRALLOC_ARGS+1];
-    size_t len[MAX_VSTRALLOC_ARGS+1];
-    size_t l;
-
-    if (str == NULL) {
-	errordump(_("internal_vstralloc: str is NULL"));
-	/*NOTREACHED*/
-    }
-
-    a = 0;
-    arg[a] = str;
-    l = strlen(str);
-    total_len = len[a] = l;
-    a++;
-
-    while ((next = arglist_val(argp, char *)) != NULL) {
-	if ((l = strlen(next)) == 0) {
-	    continue;				/* minor optimisation */
-	}
-	if (a >= MAX_VSTRALLOC_ARGS) {
-	    errordump(_("%s@%d: more than %d args to vstralloc"),
-		      file ? file : _("(unknown)"),
-		      file ? line : -1,
-		      MAX_VSTRALLOC_ARGS);
-	    /*NOTREACHED*/
-	}
-	arg[a] = next;
-	len[a] = l;
-	total_len += l;
-	a++;
-    }
-
-    result = g_malloc(total_len+1);
-
-    next = result;
-    for (b = 0; b < a; b++) {
-	memcpy(next, arg[b], len[b]);
-	next += len[b];
-    }
-    *next = '\0';
-
-    return result;
-}
-
-/* vstrextend -- Extends the existing string by appending the other 
- * arguments. */
-char *
-debug_vstrextend(
-    const char *file,
-    int		line,
-    char **	oldstr,
-    ...)
-{
-	char *keep = *oldstr;
-	va_list ap;
-
-	arglist_start(ap, oldstr);
-
-	if (*oldstr == NULL)
-		*oldstr = "";
-	*oldstr = internal_vstralloc(file, line, *oldstr, ap);
-        amfree(keep);
-
-	arglist_end(ap);
-        return *oldstr;
-}
-
 /*
  * safe_env_full - build a "safe" environment list.
  */
