@@ -425,12 +425,6 @@ typedef union sockaddr_union {
 #include "debug.h"
 #include "file.h"
 
-/* Usage: vstrextend(foo, "bar, "baz", NULL). Extends the existing 
- * string, or allocates a brand new one. */
-char *debug_vstrextend(const char *file, int line, char **oldstr, ...);
-
-#define vstrextend(...)		debug_vstrextend(__FILE__,__LINE__,__VA_ARGS__)
-
 /*@only@*/ /*@null@*/ char *debug_agets(const char *file, int line, FILE *f);
 /*@only@*/ /*@null@*/ char *debug_areads(const char *file, int line, int fd);
 #define agets(f)	      debug_agets(__FILE__,__LINE__,(f))
